create board and logic to place xs os

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -35,4 +35,11 @@ body {
   height: 50px;
   width: 50px;
   background: blue;
+  border: solid 1px black;
+  float: left;
+  text-align: center;
+}
+
+.row {
+
 }
